update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -127,7 +127,22 @@ tags:
 
 - Docker 가 나온 이후 kubernetes 를 비롯한 다양한 Container Orchestration 이 쏟아져나왔다.
 - 이 제품들 간에 개념, 용어, 기술이 서로 다 다르다.
+- 하지만 이제 kubernetes 만 알면 된다.
+	- [사용도가 압도적이기 때문](https://trends.google.com/trends/explore?date=today%205-y&q=%2Fg%2F11b7lxp79d,docker%20swarm,hashicorp%20nomad,%2Fm%2F012n8tpr&hl=en)
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 7.png|500]]
+
+- Container Orchestration 은 쿠버네티스가 표준으로 되가고 있고, 이제 Container 간의 싸움이 시작된다.
+- 초반에는 docker 가 우세했다.
+	- 보안이 약하다는 것은 시간이 충분히 지나면 보완될 것이라는 기대가 있었고 실제로 보완이 되었었으니까.
+- 하지만 k8s 에서 docker 가 빠진다는 이야기가 계속 돌며 docker 의 위세가 조금씩 꺾이기 시작하였다.
+- 이유는 docker 가 쿠버네티스 인터페이스와 잘 맞지 않아서 그렇다.
+- 물론 처음에는 docker 를 메인으로 쿠버네티스가 만들어졌다.
+- 하지만 쿠버네티스가 표준화가 될 수록 docker 가 걸림돌이 되고 있다.
+- 이제 누가 쿠버네티스와 호환성이 좋은지가 컨테이너를 선택하는 중요한 결정요소가 되었다.
+- 그 이후에 나온 컨테이너가 containerd 와 cri-o 이다.
+- containerd 는 docker 에 컨테이너를 만들어주는 기능이 분리된 것이다.
+- docker 가 설치할 때는 간단해 보여도 엄청 많은 기능들이 녹아진 엔진이다.
+- 그 엔진에서 containerd 프로젝트만 분리되어 나왔고 CNCF 에 기부가 된다.
 - 
-
-
 
