--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -122,27 +122,43 @@ tags:
 
 ## Container Orchestration 의 히스토리
 
-
-
-
 - Docker 가 나온 이후 kubernetes 를 비롯한 다양한 Container Orchestration 이 쏟아져나왔다.
 - 이 제품들 간에 개념, 용어, 기술이 서로 다 다르다.
-- 하지만 이제 kubernetes 만 알면 된다.
+- 하지만 이제 쿠버네티스만 알면 된다.
 	- [사용도가 압도적이기 때문](https://trends.google.com/trends/explore?date=today%205-y&q=%2Fg%2F11b7lxp79d,docker%20swarm,hashicorp%20nomad,%2Fm%2F012n8tpr&hl=en)
 
-![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 7.png|500]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 6.png|500]]
 
 - Container Orchestration 은 쿠버네티스가 표준으로 되가고 있고, 이제 Container 간의 싸움이 시작된다.
 - 초반에는 docker 가 우세했다.
 	- 보안이 약하다는 것은 시간이 충분히 지나면 보완될 것이라는 기대가 있었고 실제로 보완이 되었었으니까.
 - 하지만 k8s 에서 docker 가 빠진다는 이야기가 계속 돌며 docker 의 위세가 조금씩 꺾이기 시작하였다.
 - 이유는 docker 가 쿠버네티스 인터페이스와 잘 맞지 않아서 그렇다.
-- 물론 처음에는 docker 를 메인으로 쿠버네티스가 만들어졌다.
-- 하지만 쿠버네티스가 표준화가 될 수록 docker 가 걸림돌이 되고 있다.
-- 이제 누가 쿠버네티스와 호환성이 좋은지가 컨테이너를 선택하는 중요한 결정요소가 되었다.
-- 그 이후에 나온 컨테이너가 containerd 와 cri-o 이다.
+
+- 처음에는 docker 처럼 사용자들이 쓰기 편한 컨테이너가 주목되었다.
+	- 그래서 docker 를 메인으로 쿠버네티스가 만들어졌다.
+- 그런데 이제 점점 컨테이너와 컨테이너 오케스트레이션이 함께 움직이며 컨테이너를 직접 다룰 일이 점점 줄어들었다.
+- 왜냐하면 kubernetes 가 컨테이너 런타임을 알아서 조작하기 때문이다.
+- 그래서 이제 컨테이너는 k8s 와 인터페이스가 잘 맞는지가 중요해졌다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 7.png]]
+
+- 그 이후에 나온 컨테이너 런타임이 containerd 와 cri-o 이다.
+
 - containerd 는 docker 에 컨테이너를 만들어주는 기능이 분리된 것이다.
-- docker 가 설치할 때는 간단해 보여도 엄청 많은 기능들이 녹아진 엔진이다.
-- 그 엔진에서 containerd 프로젝트만 분리되어 나왔고 CNCF 에 기부가 된다.
-- 
+	- docker 에는 컨테이너 기능뿐만 아니라 많은 기능이 담겨있다.
+	- 그 엔진에서 containerd 프로젝트만 분리되어 나온 것이다. 
+- cri-o 는 redhat 에서 만든 컨테이너 런타임이다.
+
+- 두 컨테이너 런타임은 모두 CNCF 에 기부되었다.
+- CNCF 는 클라우드 분야의 표준을 관장하는 곳이다.
+- 여기에서 관리하는 프로젝트들은 기술 성숙도에 따라 Incubating project, Graduated project 로 불린다.
+- Graduated project 는 충분히 기술이 성숙되었을 때 주어진다.
+	- 따라서 앞으로 쿨라우드 기술을 고를 때 CNCF 를 졸업했다고 하면 그냥 믿고 쓰면 된다.
+- containerd 는 이미 Graduated project
+- cri-o 는 아직 Incubating project 이지만 곧 Graduated project 가 될 예정이다.
+
+
+
+
 
