update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -9,11 +9,11 @@ tags:
   - Linux
   - DevOps
 ---
-# 전체 그림
+# 전체 그림 1
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 1.png]]
 
-# Linux OS
+## Linux OS
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 2.png]]
 
@@ -81,7 +81,7 @@ tags:
 		- [Google Trend](https://trends.google.com/trends/explore?date=today%205-y&q=rocky%20linux,alma%20linux&hl=en)
 		- Github Stars 와 forks 개수
 	
-# Container
+## Container
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 3.png]]
 
@@ -104,23 +104,23 @@ tags:
 - 그런데 이 OS 가 redhat 으로 인수되면서 fedora coreOS 로 이름이 바뀌었다.
 - 그런데 redhat 이 밀고 있는 컨테이너가 cri-o(크라이오)기 때문에 rkt 의 입지가 점점 줄어들고 있다.
 
-# Container Orchestration
+## Container Orchestration
 
-## Container Orchestration 이 가지는 장점
+### Container Orchestration 이 가지는 장점
 
-### Container 만으로 배포하는 과정
+#### Container 만으로 배포하는 과정
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 4.png]]
 
 - 위 과정을 사용자가 차레대로 전부 해야한다.
 
-### Container Orchestration 으로 배포하는 과정
+#### Container Orchestration 으로 배포하는 과정
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 5.png]]
 
 - 사용자는 단 한번 지시만 하면 된다.
 
-## Container Orchestration 의 히스토리
+### Container Orchestration 의 히스토리
 
 - Docker 가 나온 이후 kubernetes 를 비롯한 다양한 Container Orchestration 이 쏟아져나왔다.
 - 이 제품들 간에 개념, 용어, 기술이 서로 다 다르다.
@@ -141,6 +141,8 @@ tags:
 - 왜냐하면 kubernetes 가 컨테이너 런타임을 알아서 조작하기 때문이다.
 - 그래서 이제 컨테이너는 k8s 와 인터페이스가 잘 맞는지가 중요해졌다.
 
+- 참고로 docker 가 mirantis 라는 회사에 인수가 된 이후부터 쿠버네티스 인터페이스에 잘 맞추려 하고 있기 때문에 쿠버네티스에서 docker 가 빠지지는 않게 된다.
+
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 7.png]]
 
 - 그 이후에 나온 컨테이너 런타임이 containerd 와 cri-o 이다.
@@ -158,6 +160,17 @@ tags:
 - containerd 는 이미 Graduated project
 - cri-o 는 아직 Incubating project 이지만 곧 Graduated project 가 될 예정이다.
 
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 8.png]]
+
+- 쿠버네티스도 CNCF 에 기부되었고 가장 첫번째로 졸업한(Graduated) 프로젝트이다.
+- 그리고 기업들은 쿠버네티스를 이용하여 자신의 제품들을 만들기 시작하였다.
+	- OPENSHIFT, RANcHER, VMware Tanzu 등
+- 이는 기업 관리형이라 하여, 기업이 쿠버네티스를 관리하는데 좀 더 편한 기능들을 제공해주는 제품이다.
+	- 왜 이런제품이 있느냐면, 쿠버네티스는 알면 알수록 해야할 것이 많다. 그리고 작은 기업에서는 이를 전부 다루기 힘들기 때문이다.
+	- 이런 제품을 설치하면 쿠버네티스 외에 모니터링, 로깅, 배포 툴까지 한 패키지로 설치해준다.
+	- 문제가 생기면 기술지원도 해주기 때문에 작은 기업에서는 쓸만하다.
+- 이런 제품들은 기업에서 자체 서버실에 프라이빗하게 쿠버네티스를 주로 쓰고 싶을 때 사용한다.
+- 그렇지 않고, 퍼블릭으로 쿠버네티스를 쓰고 싶으면 클라우드 서비스로 쿠버네티스를 사용한다.
 
 
 
