update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -9,7 +9,7 @@ tags:
   - Linux
   - DevOps
 ---
-# 전체 그림 1
+# Linux OS, Container, Container Orchestration
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 1.png]]
 
@@ -127,7 +127,7 @@ tags:
 - 하지만 이제 쿠버네티스만 알면 된다.
 	- [사용도가 압도적이기 때문](https://trends.google.com/trends/explore?date=today%205-y&q=%2Fg%2F11b7lxp79d,docker%20swarm,hashicorp%20nomad,%2Fm%2F012n8tpr&hl=en)
 
-![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 6.png|500]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 6.png|]]
 
 - Container Orchestration 은 쿠버네티스가 표준으로 되가고 있고, 이제 Container 간의 싸움이 시작된다.
 - 초반에는 docker 가 우세했다.
@@ -171,6 +171,12 @@ tags:
 	- 문제가 생기면 기술지원도 해주기 때문에 작은 기업에서는 쓸만하다.
 - 이런 제품들은 기업에서 자체 서버실에 프라이빗하게 쿠버네티스를 주로 쓰고 싶을 때 사용한다.
 - 그렇지 않고, 퍼블릭으로 쿠버네티스를 쓰고 싶으면 클라우드 서비스로 쿠버네티스를 사용한다.
+
+# Container Runtime
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 9.png]]
+
+
 
 
 
