--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -100,7 +100,7 @@ tags:
 - 처음에 Docker 는 root 권한으로 설치 및 실행해야 했는데 그걸 보완하였었다.
 - 하지만 현재는 rootless 설치모드가 생겨서 보안이 강화되었다.
 
-- (rkt 의 태생을 보면) linux 의 여러 배포판 중에 컨테이너 전용 linux 인 Core OS 가 있고 rkt 는 이 OS 에 대한 대표 런타임이었다.
+- (rkt 의 태생을 보면) linux 의 여러 배포판 중에 컨테이너 전용 linux 인 Core OS 가 있고 rkt 는 이 OS 에 대한 대표 컨테이너였다.
 - 그런데 이 OS 가 redhat 으로 인수되면서 fedora coreOS 로 이름이 바뀌었다.
 - 그런데 redhat 이 밀고 있는 컨테이너가 cri-o(크라이오)기 때문에 rkt 의 입지가 점점 줄어들고 있다.
 
@@ -138,21 +138,21 @@ tags:
 - 처음에는 docker 처럼 사용자들이 쓰기 편한 컨테이너가 주목되었다.
 	- 그래서 docker 를 메인으로 쿠버네티스가 만들어졌다.
 - 그런데 이제 점점 컨테이너와 컨테이너 오케스트레이션이 함께 움직이며 컨테이너를 직접 다룰 일이 점점 줄어들었다.
-- 왜냐하면 kubernetes 가 컨테이너 런타임을 알아서 조작하기 때문이다.
+- 왜냐하면 kubernetes 가 컨테이너를 알아서 조작하기 때문이다.
 - 그래서 이제 컨테이너는 k8s 와 인터페이스가 잘 맞는지가 중요해졌다.
 
 - 참고로 docker 가 mirantis 라는 회사에 인수가 된 이후부터 쿠버네티스 인터페이스에 잘 맞추려 하고 있기 때문에 쿠버네티스에서 docker 가 빠지지는 않게 된다.
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 7.png]]
 
-- 그 이후에 나온 컨테이너 런타임이 containerd 와 cri-o 이다.
+- 그 이후에 나온 컨테이너가 containerd 와 cri-o 이다.
 
 - containerd 는 docker 에 컨테이너를 만들어주는 기능이 분리된 것이다.
 	- docker 에는 컨테이너 기능뿐만 아니라 많은 기능이 담겨있다.
 	- 그 엔진에서 containerd 프로젝트만 분리되어 나온 것이다. 
-- cri-o 는 redhat 에서 만든 컨테이너 런타임이다.
+- cri-o 는 redhat 에서 만든 컨테이너이다.
 
-- 두 컨테이너 런타임은 모두 CNCF 에 기부되었다.
+- 두 컨테이너 모두 CNCF 에 기부되었다.
 - CNCF 는 클라우드 분야의 표준을 관장하는 곳이다.
 - 여기에서 관리하는 프로젝트들은 기술 성숙도에 따라 Incubating project, Graduated project 로 불린다.
 - Graduated project 는 충분히 기술이 성숙되었을 때 주어진다.
@@ -174,7 +174,45 @@ tags:
 
 # Container Runtime
 
+Container 와 Container Orchestration 의 기반 기술에 대해 알아보자.
+
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 9.png]]
+
+## Container 기반기술
+
+### Linux
+
+- 리눅스에서는 chroot, namespace, cgroup 을 기반으로 하고 있다.
+
+## Container Runtime
+
+- 컨테이너 런티임은 High Level 과 Low Level 로 나뉘어 진다.
+
+- LXC 는 커널레벨 기술을 가지고 만들어진 Low Level 컨테이너 런타임이다.
+- 그 다음으로 docker 가 LXC 를 기반으로 libcontainer 라는 Low Level 컨테이너 런타임을 만들었다.
+
+- libcontainer 를 이용하여 사용자 친화적으로 만든 High Level 컨테이너 런타임이 바로 Docker 이다.
+- Docker 는 컨테이너 생성 기술 외에 많은 기능들이 들어가 있다.
+	- API 기능, 로그 기능, 스토리지, 네트워크 등
+- 그래서 사용자 편의가 좋다고 하는 것이다.
+
+- 여기서 컨테이너 생성 역할은 containerd 가 가지고 있다.
+- containerd 는 Low Level 인 libcontainer 를 이용하여 컨테이너를 생성해준다.
+- 쿠버네티스 입장에서는 주로 컨테이너를 생성하는 기능만 쓰기 때문에 이 부가적인 기능들이 좀 과해 보일 수 있다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 10.png|700]]
+
+- 다시 돌아가서...
+- docker 는 LXC 의 기술을 이용하지만 이 둘은 큰 차이가 있다.
+- 각각 컨테이너를 만들어 주긴 하지만 그 목적이 다르기 때문이다.
+- docker 는 APP 들을 독립적인 환경에서 띄우려고 사용한다.
+- LXC 는 운영체제를 컨테이너 가상화로 나누기 위한 목적이다.
+	- 이걸 쓰면, 내 linux 호스트 위에 centOS 나 ubuntu 를 Guest OS 로 또 띄울 수 있다.
+	- 기존에 VM 기술로 했던 것을 컨테이너 기술로 하는 것이다.
+
+- 앞서 말했듯 rkt 라는 컨테이너 런타임도 있지만 사용자에게 잊혀지고 있다.
+- 왜냐하면 low level 런타임이기 때문에 쓰기가 어렵기 때문이다.
+
 
 
 
