--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -186,6 +186,8 @@ Container 와 Container Orchestration 의 기반 기술에 대해 알아보자.
 
 ## Container Runtime
 
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 11.png|700]]
+
 - 컨테이너 런티임은 High Level 과 Low Level 로 나뉘어 진다.
 
 - LXC 는 커널레벨 기술을 가지고 만들어진 Low Level 컨테이너 런타임이다.
@@ -215,7 +217,98 @@ Container 와 Container Orchestration 의 기반 기술에 대해 알아보자.
 
 
 
+- 이제 쿠버네티스가 컨테이너 런타임을 어떻게 쓰는지 보자.
+- 쿠버네티스에는 kube-apiserver 와 kubelet 이라는 컴포넌트가 있다.
+- 그리고 쿠버네티스에 컨테이너 하나를 생성하는 명령은 없고, Pod 를 만들라는 명령은 있는데 이 Pod 안에 컨테이너를 하나 이상 명시할 수 있다.
+- 그래서 일단 컨테이너 두 개를 한 Pod 에 만들라는 명령을 보내면 kube-apiserver 는 쿠버네티스로 보내지는 모든 API 를 받는다.
+- 현재 받은 API 가 Pod 생성에 관련된 내용이니까 Pod 생성을 담당하는 kubelet 에게 요청을 전달한다.
+- kubelet 은 요청을 확인한 후 Pod 안에 Conatiner 가 두개라는 것을 확인하고, Container Runtime 에게 Container 생성 명령을 날린다.
+	- 여기서는 컨테이너가 두개이기 때문에 컨테이너 생성 요청을 두번 보낸다.
+- 그러면 컨테이너 런타임은 요청 받은대로 두 개의 컨테이너를 만들어준다.
+- docker 를 컨테이너라 주로 부르지만 정확히는 컨테이너 런타임이라고 불러야 맞는 것이다.
+- 컨테이너를 생성해주는 역할을 하는 것이 컨테이너 런타임이고, 컨테이너는 생성물이다.
 
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 12.png|700]]
+
+
+- 이제 kubelet 과 Container Runtime 에 대해 이야기해보자.
+- 여기서부터가 쿠버네티스와 인터페이스에 대한 내용이다.
+- kubelet 은 컨테이너 런타임이 받을 수 있는 형태의 API 를 호출한다.
+- 실제로 kubelet 소스를 보면 case 문으로 docker 인지 rkt 인지 판단하는 로직이 있다.
+- docker 랑 rkt 에 호출 API 들을 모아둔 패키지들도 있어서 컨테이너 런타임에 맞춤형 API 를 날려준다.
+- 쿠버네티스 1.0 버전은 이렇게 시작했다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 13.png|300]]
+
+- 하지만 시간이 지나며 docker 에서 containerd 가 따로 분리되서 나왔다.
+	- 지금 쿠버네티스를 설치할 때 containerd 를 제일 많이 쓴다.
+- 그리고 점점 컨테이너 런타임이 늘어나게 되었다.
+- 쿠버네티스는 런타임이 늘어날 때마다 kubelet 소스를 건드려야 되는 구조.
+- 그래서 쿠버네티스는 1.5 버전 부터는 interface 를 추가한다.
+- 그리고 구현부를 따로 빼는데 이를 CRI 라고 해서 Container Runtime Interface 라고 부른다.
+- kubelet 에 인터페이스 규격을 정하고 이 규격에 맞게 구현부를 만들었고, 이 구현부에서 각각에 컨테이너 런타임을 호출한다.
+	- 구현부는 쿠버네티스 프로젝트에 있는 것이고, 이 프로젝트가 오픈소스니까 각각 컨테이너 런타임 측(docker, rkt 등)에서 쿠버네티스 프로젝트의 소스를 contribution 하는 형태이다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 14.png|300]]
+
+- 쿠버네티스에서 docker 를 더이상 지원 안한다는 이야기가 있었다.
+- 이게 1.0 버전 부터 썼던 로직을 1.20 버전부터는 없애겠다는 것이고, 1.5 버전 부터 인터페이스 규격으로 정한 로직을 쓰겠다는 말이었다.
+- 그런데 docker 를 아예 못쓴다고 사람들이 오해를 했었다.
+- 그래서 쿠버네티스에서는 CRI 규격에 맞춰진 dockershim 이 있으니까 docker 를 그대로 쓸 수 있다고 답변하였다.
+
+- 그런데 이게 1.23 버전까지만 유지를 하고 1.24 버전부터는 dockershim 이 없어진다는 이야기가 나왔다.
+- 그래서 또 사람들이 쿠버네티스에서 도커를 못쓴다고 생각을 했다.
+	- 이떄 많은 사람들이 containerd 로 전환하기 시작했다.
+- 이게 CRI 구현부가 없어지는게 아니라 dockershim 만 빼겠다는 내용인데, 왜 그런 상황이 생겼냐면,
+	- 1.5 버전부터 23 버전까지 dockershim 이 유지되면서 dockershim 관리가 잘 안됐고, 버그도 많았다고 한다.
+	- 이 docker 가 수익 모델이 별로 없고, 그래서 인수도 된거니 관리하기가 힘들었던 배경이 좀 느껴진다.
+- 그리고 docker 유료화 얘기를 들은 사람들이 있을텐데, 이건 컨테이너 런타임으로서의 docker 가 유료화가 되는 것이 아니라, 윈도우로 설치해서 관리하는 docker desktop 이 유료화 하겠다는 것이었다.
+- 그래서 컨테이너 런타임에 docker는 그대로 사용해도 된다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 15.png|600]]
+
+- 그리고 kubelet 에 다음 단계가 있는데, 이 docker 부분만 먼저 설명을 하면
+- mirantis 가 docker 를 인수하고, cri-dockerd 라는 어댑터를 만들었는데 내용적으로는 dockershim 을 밖으로 뺀것이다.
+- 이것을 통해서 docker 를 다시 지원할 수 있게 했다.
+- 그래서 1.24 버전부터는 또 docker 가 계속 지원이 된다.
+- 다만 이름이 좀 바뀌어서 cri-dockerd 를 미란티스 컨테이너 런타임이라 부른다.
+- 이렇게 우여곡절이 있는동안 containerd 나 cri-o 에게 런타임을 많이 내줬다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 16.png|300]]
+
+- 컨테이너 표준에 대한 이야기를 해보자.
+- 이런 이슈들 때문에 컨테이너 런타임을 변경해야 되나 싶을 때 고민되는 부분이 이 container image 이다.
+- 만약 docker 에서 containerd 로 런타임을 바꾸게 되면 기존에 쓰던 이미지를 다시 만들어야 할까?
+- 아니다. docker 도 결국 containerd 를 쓰기 때문에 만들어지는 컨테이너는 같다.
+
+- 하지만 별개로 컨테이너 종류가 점점 많어지면서 표준의 필요성을 느끼게 됐고, 그래서 만들어진 단체가 OCI 이다.
+- 여기서는 컨테이너 런타임이 컨테이너를 만들 때 지켜야되는 표준 규약들을 관리한다.
+- 그래서 이 규약을 지켜서 컨테이너를 만들면 런타임 끼리 서로 공유해서 쓸 수 있게 된다.
+- 이때 docker 에서는 이 OCI 규격을 맞추기 위해서 Low Level 에 runC 를 만들었고, containerd 에서도 이것을 쓰도록 변경하였다.
+- 이 runC 가 기존에 libcontainer 와 다른 점은 이제 LXC 를 이용하지 않고 kernel 레벨에 가상화 기술을 쓴다는 것이다.
+- rkt 도 마찬가지로 oci 표준을 따르고 있다.
+- 그렇기 때문에 docker 에서 돌던 컨테이너 이미지를 rkt 에서도 사용할 수 있다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 17.png|900]]
+
+- 현재까지는 아래 부분이 CRI 구간이다.
+- 내부간 통신은 grpc 라는 걸로 하는데 여전히 쿠버네티스 입장에서는 아쉬운 점이 있다.
+- 컨테이너 런타임의 기술 개발과 쿠버네티스의 기술 개발은 서로 별개이다.
+- 그런데 docker 에 새로운 기능이 생기면 쿠버네티스도 같이 패치를 해야한다.
+- 여전히 이 구조상 컨테이너 런타임이 변경될 때 마다 CRI 의 구현체도 수정을 해야되니까 결국 쿠버네티스도 패치해야 하는 것이다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 18.png|300]]
+
+- 그래서 아래와 같이 kubelet 에서 컨테이너 런타임으로 바로 받을 수 있게 구조를 바꾸었다.
+- 이런 구조를 지원하기 위해서 containerd 에서는 CRI-Plugin 이라는 기능이 추가되었다.
+- cri-o 는 태생부터 redhat 이 이 규격을 맞춰서 만든 런타임이다.
+- 그리고 mirantis 컨테이너 런타임도 이것을 따르려고 cri-dockerd 를 만들었던 것이다.
+- 그리고 쿠버네티스에서는 1.27 버전 부터, POD 를 만들라고 했을 때 이 구조를 기본 동작으로 실행한다.
+- 이 강의도 1.27 버전에 쿠버네티스를 설치하기 때문에 대략 이런 구조이겠구나 하고 생각하면 된다.
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 19.png|400]]
+
+- 그리고 이제는 cri-o 를 사용해도 docker 로 만든 이미지가 cri-o 에서도 잘 돌아갈 것이라 생각할 수 있다.
 
 
 
