update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -308,7 +308,10 @@ Container 와 Container Orchestration 의 기반 기술에 대해 알아보자.
 
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 19.png|400]]
 
-- 그리고 이제는 cri-o 를 사용해도 docker 로 만든 이미지가 cri-o 에서도 잘 돌아갈 것이라 생각할 수 있다.
+- 참고로 OCI 표준을 아무리 맞췄어도 이미지가 다른 컨테이너 런타임에서 잘 돌아갈까 걱정이 될수도 있다.
+- 예를들어 docker 에서 만든 이미지가 cri-o 에서 잘 돌아갈까?
+- 돌아간다. cri-o 도 runC 를 쓰기 때문이다.
 
-
+- 나중에 쿠버네티스를 설치할 때 systemd, cgroups 라는 단어를 자주 볼 것이다.
+- 이 기술은 Kernel 레벨의 기술이라고 생각해두면 된다.
 
