update: 쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 쿠버네티스 제대로 시작하기 - 컨테이너 한방 정리

--- a/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
+++ b/01. Development/02. Lecture/쿠버네티스 어나더 클래스 (지상편)/컨테이너 한방 정리.md
@@ -47,6 +47,8 @@ tags:
 
 - 이렇게 기업에서는 redhat 계열을 많이 쓰고, 개인 학습용이나 클라우드에서는 ubuntu 를 많이 쓴다.
 
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 20.png]]
+
 - 하지만 이제 CentOS8 은 2021년 지원 종료, CentOS7 은 2024년 지원 종료된다.
 - 이유
 	1. 시장 점유율이 ubuntu 가 압도적
@@ -110,13 +112,13 @@ tags:
 
 #### Container 만으로 배포하는 과정
 
-![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 4.png]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 4.png|500]]
 
 - 위 과정을 사용자가 차레대로 전부 해야한다.
 
 #### Container Orchestration 으로 배포하는 과정
 
-![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 5.png]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 5.png|500]]
 
 - 사용자는 단 한번 지시만 하면 된다.
 
@@ -127,7 +129,7 @@ tags:
 - 하지만 이제 쿠버네티스만 알면 된다.
 	- [사용도가 압도적이기 때문](https://trends.google.com/trends/explore?date=today%205-y&q=%2Fg%2F11b7lxp79d,docker%20swarm,hashicorp%20nomad,%2Fm%2F012n8tpr&hl=en)
 
-![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 6.png|]]
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 6.png||1000]]
 
 - Container Orchestration 은 쿠버네티스가 표준으로 되가고 있고, 이제 Container 간의 싸움이 시작된다.
 - 초반에는 docker 가 우세했다.
@@ -176,7 +178,17 @@ tags:
 
 Container 와 Container Orchestration 의 기반 기술에 대해 알아보자.
 
+## 전체 그림
+
 ![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 9.png]]
+
+## CRI 전체 그림
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 21.png]]
+
+## OCI 전체 그림
+
+![[쿠버네티스 어나더 클래스 (지상편) - Sprint1 - 섹션 1 - 그림 22.png]]
 
 ## Container 기반기술
 
