update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -13,6 +13,8 @@ tags:
 
 # 02. 효율적인 메모리 사용
 
+- 15장에서 만든 서버에서는 메모리와 가비지에 대한 고려가 없다.
+
 ```java
 private void read(SelectionKey key) {
 	// SelectionKey 로부터 소켓채널을 얻어온다.
