--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -57,15 +57,21 @@ private void clearBuffer(ByteBuffer buffer) {
 
 `중요` 라고 주석을 추가해놓은 부분을 보면 클라이언트들이 보낸 메시지를 처리할 때마다 매번 ByteBuffer 를 생성해서 사용하고, 사용이 끝나면 이 버퍼를 null 로 만들어서 가비지 컬렉션 대상으로 만든다.
 
-이 방법은 매번 가비지를 생성하게 된다.
+멀티스레드를 사용하지 않기 때문에 OutOfMemoryException 이 터지지는 않겠지만, 매번 가비지를 생성하게 된다는 것이 아쉽다.
 
 따라서 이 부분을 재사용하는 것이 필요하다.
-14장의 메모리 매핑을 설명하는 곳에서 만든 ByteBufferPool 을 이곳에서 사용하면 효율적으로 메모리를 재사용할 수 있다.
-매번 ByteBuffer 객체의 생성, 해제에 따른 가비지 생성 부담도 줄어들 것이다.
+14장의 메모리 매핑을 설명하는 곳에서 만든 ByteBufferPool 을 이곳에서 사용하면 효율적으로 메모리를 재사용할 수 있고, 매번 ByteBuffer 객체의 생성, 해제에 따른 가비지 생성 부담도 줄어들 것이다.
 
-다이렉스 ByteBuffer 를 생성하는 것은 상당히 느린 작업이고, 이 문제는 ByteBufferPool 을 사용하여 해결할 수 있다.
+다이렉트 ByteBuffer 를 생성하는 것은 상당히 느린 작업이고, 이 문제는 ByteBufferPool 을 사용하여 해결할 수 있다.
+
+ByteBufferPool 은 메모리와 파일 매핑을 통해 생성한 버퍼 두 가지를 함께 가지고 있다. 
+- 평소에는 일반적으로 성능이 뛰어난 메모리 버퍼를 사용하고 
+- 초기에 설정한 메모리 버퍼가 이미 모두 사용중일 때에는 파일 매핑을 통해 생성한 가상 메모리 버퍼, 즉 MappedByteBuffer를 시용함으로써 물리적 메모리의 한계를 극복할 수 있도록 만든 버퍼다
 
 # 03. 비효율적인 데이터 전송에 대한 고려
+
+
+
 
 # 04. 동시성을 이용한 성능 극대화
 
