--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -70,8 +70,21 @@ ByteBufferPool 은 메모리와 파일 매핑을 통해 생성한 버퍼 두 가
 
 # 03. 비효율적인 데이터 전송에 대한 고려
 
+데이터를 읽고 쓸 때 기존 블록킹 형태의 서버들이 보내는 데이터를 위의 서버로 받으면 1 Byte만 전송되는 경우가 종종 있다.
 
+예를 들어, 클라이언트가 100Byte 인 메시지를 보냈는데, 그 중 1 Byte 만이 먼저 서버에 도착할 경우 서버가 작동하는 순서에 대해 알아보자.
 
+1. 해당 클라이언트의 채널에서 읽기 준비가 되었다고 SelectionKey 의 Ready Set 에 표시한다.
+2. 그 후 Selector 의 `select()` 메소드가 호출되고 해당 이벤트를 처리하기 위해 그리고 어떤 이벤트인지를 구분하기 위해 `isAcceptable()`, `isReadable()` 등의 메소드를 호출한다.
+3. read 이벤트이므로 클라이언트가 보낸 메시지를 읽는다. 하지만 1 Byte 이므로 별 의미가 없다. 따라서 다시 1번부터 반복적으로 실행되는 과정을 거친 후에 남은 메시지를 읽을 수 있다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 16-3.png|600]]
+
+결국 의미없이 도착한 1 Byte 메시지 때문에 서버는 같은 과정을 두번 거치게 되기 때문에 성능 저하가 일어난다.
+쓰기도 마찬가지다. 버퍼링을 하지 않고 그냥 데이터를 스트림에 흘려보낼 경우, 받는 쪽에서는 위에서 설명한 것과 같은 부담이 생기게 된다.
+
+이 부분을 가장 간단하고 효율적으로 처리하는 방법이 `read()` 메소드를 두 번 호출하게 하는 것이다.
+쓰기는 `compact()`, `hasRemaining()` 메소드를 이용해서 아직 버퍼의 내용을 다 보내지 못한 경우, 곧바로 다시 보내게 만들 수 있다.
 
 # 04. 동시성을 이용한 성능 극대화
 
@@ -84,7 +97,7 @@ ByteBufferPool 은 메모리와 파일 매핑을 통해 생성한 버퍼 두 가
 SelectionKey key = (SelectionKey) it.next();
 if (key.isAcceptable()) {
 	// 서버 소켓채널에 클라이언트가 접속을 시도한 경우
-	accept(key);
+	accept(key); // 중요
 } else if (key.isReadable()) {
 	// 이미 연결된 클라이언트가 메시지를 보낸 경우
 	read(key);
