update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -114,11 +114,9 @@ if (key.isAcceptable()) {
 
 - 만 명 정도의 동시접속자가 항상 유지될 정도로 사용자의 접속, 해제가 빈번한 서버를 개발해야 한다고 생각해보자.
 - Accept 부분을 별도의 셀렉터로 분리해도 접속 자체가 워낙 빈번하면 Accept 부분에서 병목이 일어날 것이다.
-
 - 이런 경우에는 Accpet 를 수행하는 셀렉터를 n개로 만들어서 사용하는 것이 효과적이다.
 
-- Read 를 수행하는 셀럭터가 단 하나뿐인데, 동시접속자가 훨씬 많다면 관리할 채널이 너무 많기 때문에 셀렉터 효율이 떨어질 것이다.
-
+- Read 를 수행하는 셀렉터가 단 하나뿐인데, 동시접속자가 훨씬 많다면 관리할 채널이 너무 많기 때문에 셀렉터 효율이 떨어질 것이다.
 - 따라서 이 부분도 Read 를 수행하는 셀렉터를 n개로 만들어서 사용하는 것이 효과적이다.
 
 > [!note]
@@ -178,7 +176,9 @@ private void read(SelectionKey key) {
 - 위 코드 두개 모두 요청을 싱글 스레드로 처리하고 있다.
 - 이 부분 역시 ThreadPool 을 사용해서 스레드 여러 개로 동시에 처리할 수 있게 만들면 성능을 향상시킬 수 있다.
 
-- Accept 를 처리하는 것과 Processe 를 처리하는 것으로 나눠서 별도의 독립적인 ThreadPool 로 운영되게 하자.
+- 여기서 중요한 것은 앞서 Accept 와 Processe(Connect, Read, Write)로 나눠서 사용한 것과 마찬가지로 
+- ThreadPool 역시 Accept 를 처리하는 것과 Processe(Connect, Read, Write)를 처리하는 것으로 나눠서 별도의 독립적인 ThreadPool 로 운영되게 하자.
+
 - 그러면 병목지점이 되는 곳을 파악했을 경우, 그 쪽의 스레드 개수를 늘리는 방식으로 쉽게 튜닝할 수 있다.
 
 # 05. 향상된 서버 만들기
