update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -183,11 +183,12 @@ private void read(SelectionKey key) {
 
 # 05. 향상된 서버 만들기
 
-앞서 공부한 내용을 적용시켜보자.
+앞서 공부한 내용 중 ByteBufferPool, ThreadPool, Accept 분리 등을 적용해서 15장에서 만들어본 서버를 업그레이드 해보자.
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 16-1.png]]
 
 패키지 구조는 크게 event, pool, queue, server, util 패키지가 존재한다.
+각각의 패키지 역할에 대해 알아보고, 중요하다고 생각되는 코드부분을 보자.
 
 ## 패키지 구조
 
