--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -202,6 +202,7 @@ private void read(SelectionKey key) {
 ### pool
 
 - AdvancedChatServer 가 기존 서버보다 더 뛰어난 성능을 보일 수 있는 핵심적인 역할을 하는 클래스들을 담은 곳이다.
+- 여기에는 Pool 이 세개 존재한다.
 
 - ByteBufferPool
 	- 14장의 파일매핑 부분과 같다.
