update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -206,7 +206,7 @@ private void read(SelectionKey key) {
 
 - ByteBufferPool
 	- 14장의 파일매핑 부분과 같다.
-	- 다만 여기서는 인터페이스를 이용하였다.
+	- 다만 이곳에서는 사용할 메소드들을 인터페이스로 빼내서 인터페이스를 통해 사용하게 만든 점이 다르다.
 
 - ThreadPool
 	- accept, read/write 를 처리한다.
@@ -220,14 +220,15 @@ private void read(SelectionKey key) {
 ### queue
 
 - 셀렉터에서 준비된 이벤트들은 스레드들이 다이렉트로 처리할 수 없다.
-- 생성자-소비자 패털을 사용해서 셀렉터와 스레드를 연관시키는 것이다.
+- 생성자-소비자 패턴을 사용해서 셀렉터와 스레드를 연관시키는 것이다.
+- 즉, 셀렉터에서 발생한 이벤트를 해당 형식의 속성을 갖는 Job 객체로 만들어 이 패키지의 Queue 객체에 저장하고 ThreadPool 객체의 각 스레드들은 이 Queue 객체에서 해당 Job 객체를 꺼내서 처리하는 것이다.
 
 - 그리고 이 서버에 접속한 전체 사용자들을 등록하기 위해 ChattingRoom 이라는 Vector 를 상속한 클래스를 만들어 사용했다.
 
 ### server
 
 - AdvancedChatServer 서버를 실행시키는 클래스가 위치한 패키지
-- 서버가 실행되는 데 필요한 각 클래스들을 초기화하고 이들을 시작시키는 역할만을 한다.
+- AdvancedChatServer 클래스는 서버가 실행되는 데 필요한 각 클래스들을 초기화하고 이들을 시작시키는 역할만을 한다.
 
 ### util
 
