update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -250,38 +250,38 @@ private void read(SelectionKey key) {
 ```java
 package net.daum.javacafe.server;
 
-import java.io.File; 
-import java.io.IOException;
-import net.daum.javacafe.pool.PoolManager;
-import net.daum.javacafe.pool.buffer.ByteBufferPool;
-import net.daum.javacafe.pool.buffer.ByteBufferPoolIF;
-import net.daum.javacafe.pool.selector.AcceptSelectorPool;
-
-import net.daum.javacafe.pool.selector.RequestSelectorPool;
-import net.daum.javacafe.pool.selector.SelectorPoolIF; 
-import net.daum.javacafe.pool.thread.ThreadPool;
-import net.daum.javacafe.pool.thread.ThreadPoolIF;
-import net.daum.javacafe.queue.BlockingEventQueue;
+import java.io.File;  
+import java.io.IOException;  
+  
+import net.daum.javacafe.pool.PoolManager;  
+import net.daum.javacafe.pool.buffer.ByteBufferPool;  
+import net.daum.javacafe.pool.buffer.ByteBufferPoolIF;  
+import net.daum.javacafe.pool.selector.AcceptSelectorPool;  
+import net.daum.javacafe.pool.selector.RequestSelectorPool;  
+import net.daum.javacafe.pool.selector.SelectorPoolIF;  
+import net.daum.javacafe.pool.thread.ThreadPool;  
+import net.daum.javacafe.pool.thread.ThreadPoolIF;  
+import net.daum.javacafe.queue.BlockingEventQueue;  
 import net.daum.javacafe.queue.Queue;
 
 public class AdvancedChatServer {
 
-	private Queue queue = null;
-	private SelectorPoolIF acceptSelectorPool = null;
-	private SelectorPoolIF requestSelectorPool = null;
-
-	private ByteBufferPoolIF byteBufferPool = null;
-
-	ThreadPoolIF acceptThreadPool = null;
-	ThreadPoolIF readWriteThreadPool = null;
-
-	public AdvancedChatServer() {
-		try {
-			initResource();
-			startServer();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+	private Queue queue = null;  
+	private SelectorPoolIF acceptSelectorPool = null;  
+	private SelectorPoolIF requestSelectorPool = null;  
+	  
+	private ByteBufferPoolIF byteBufferPool = null;  
+	  
+	ThreadPoolIF acceptThreadPool = null;  
+	ThreadPoolIF readWriteThreadPool = null;  
+	  
+	public AdvancedChatServer() {  
+	    try {  
+	       initResource();  
+	       startServer();  
+	    } catch (IOException e) {  
+	       e.printStackTrace();  
+	    }  
 	}
 
 	private void initResource() throws IOException {
@@ -327,7 +327,7 @@ public class AdvancedChatServer {
 ```
 
 - 먼저 ByteBufferPoolIF, Queue, ThreadPoolIF, SelectorPoolIF 순 으로 필요한 자원을 초기화한다
-- 그런 후에 startServer() 메소드에서 ThreadPoolIF 와 SelectorPoolIF 의 스레드들을 시작시켜서 서버를 시작한다.
+- 그런 후에 `startServer()` 메소드에서 ThreadPoolIF 와 SelectorPoolIF 의 스레드들을 시작시켜서 서버를 시작한다.
 
 ### Queue 인터페이스와 BlockingEventQueue
 
@@ -355,11 +355,11 @@ import net.daum.javacafe.event.NIOEvent;
 
 public class BlockingEventQueue implements Queue {
 
-	private final Object acceptMonitor = new Object();
-	private final Object readMonitor = new Object();
+	private final Object acceptMonitor = new Object(); // 중요
+	private final Object readMonitor = new Object(); // 중요
 
-	private final List acceptQueue = new ArrayList();
-	private final List readQueue = new ArrayList();
+	private final List acceptQueue = new ArrayList(); // 중요
+	private final List readQueue = new ArrayList(); // 중요
 
 	// BlockingEventQueue 하나만 생성할 수 있도록 싱글톤 패턴을 사용한다.
 	private static BlockingEventQueue instance = new BlockingEventQueue();
@@ -376,7 +376,7 @@ public class BlockingEventQueue implements Queue {
 	private BlockingEventQueue() {}
 
 	// 이벤트 형식에 따라 어떤 큐에서 Job 객체를 가져올지 결정한다.
-	public Job pop(int eventType) {
+	public Job pop(int eventType) { // 중요
 		switch (eventType) {
 			case NIOEvent.ACCEPT_EVENT : return getAcceptJob();
 			case NIOEvent.READ_EVENT   : return getReadJob();
@@ -385,7 +385,7 @@ public class BlockingEventQueue implements Queue {
 	}
 
 	private Job getAcceptJobe() {
-		synchronized (acceptMonitor) {
+		synchronized (acceptMonitor) { // 중요
 			if (acceptQueue.isEmpty()) {
 				try {
 					acceptMonitor.wait();
