update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -384,7 +384,7 @@ public class BlockingEventQueue implements Queue {
 		}
 	}
 
-	private Job getAcceptJobe() {
+	private Job getAcceptJob() {
 		synchronized (acceptMonitor) { // 중요
 			if (acceptQueue.isEmpty()) {
 				try {
@@ -411,7 +411,7 @@ public class BlockingEventQueue implements Queue {
 	}
 
 	// Job 객체의 이벤트에 따라 어떤 큐에 데이터를 넣을지 결정한다.
-	public void push(Job job) {
+	public void push(Job job) { // 중요
 		if (job != null) {
 			int eventType = job.getEventType();
 			switch (eventType) {
@@ -423,14 +423,14 @@ public class BlockingEventQueue implements Queue {
 	}
 
 	private void putAcceptJob(Job job) {
-		synchronized (acceptMonitor) {
+		synchronized (acceptMonitor) { // 중요
 			acceptQueue.add(job);
 			acceptMonitor.notify();
 		}
 	}
 
 	private void putReadJob(Job job) {
-		synchronized (readMonitor) {
+		synchronized (readMonitor) { // 중요
 			readMonitor.add(job);
 			readMonitor.notify();
 		}
@@ -439,12 +439,14 @@ public class BlockingEventQueue implements Queue {
 ```
 
 - 이 클래스는 내부적으로 큐 두 개를 가지고 있다 (acceptQueue, readQueue)
-	- 이벤트에 따라 다른 큐를 사용하게 만드는 대신 공토된 큐 하나만을 사용했다.
+	- 혼란을 덜기 위해 이벤트에 따라 다른 큐를 사용하게 만드는 대신 공통된 큐 하나만을 사용했다.
 	- 그리고 해당 큐 안에서 이벤트에 따라 다른 저장 큐를 사용하도록 구현했다.
 - 저장 큐가 두 개기 때문에 해당 큐에 따라 사용할 모니터도 두 개이다.
 	- accpetMonitor, readMonitor
 
 ### Job 객체
+
+- 이제 이 큐에 저장되는 이벤트 정보를 캡슐화하고 있는 Job 객체를 살펴보자.
 
 ```java
 package net.daum.javacafe.event;
@@ -452,8 +454,8 @@ package net.daum.javacafe.event;
 import java.util.Map;
 
 public class Job {
-	private int eventType;
-	private Map session = null;
+	private int eventType; // 중요
+	private Map session = null; // 중요
 
 	public Job () {}
 	
@@ -482,7 +484,7 @@ public class Job {
 
 - 이벤트 형식에 해당하는 정보와 그 이벤트를 처리하는 데 필요한 기타 정보를 저장하고 있는 Map 객체를 캡슐화해서 가지고 있는 단순한 형태의 객체이다.
 
-### PoolManager, SelectorPoolIF, SelectorPoolAdaptor, AcceptSelectorPool
+### PoolManager, SelectorPoolAdaptor, AcceptSelectorPool
 
 - pool 패키지의 세 가지 풀링 클래스를 보자.
 - ByteBufferPool 은 14장에서 설명했으니 넘어간다.
@@ -504,27 +506,27 @@ public class PoolManager {
 
 	private PoolManager() {}
 
-	// AcceptSelectorPool에 등록한다.  
+	// AcceptSelectorPool에 등록한다.
 	public static void registAcceptSelectorPool(SelectorPoolIF selectorPool) {
 		map.put("AcceptSelectorPool", selectorPool) ;
 	}
 
-	// RequestSelectorPool에등록한다.  
+	// RequestSelectorPool에 등록한다.
 	public static void registRequestSelectorPool(SelectorPoolIF selectorPool) {
 		map.put("RequestSelectorPool", selectorPool);
 	}
 
-	// AcceptSelectorPool 가져오기  
+	// AcceptSelectorPool 가져오기
 	public static SelectorPoolIF getAcceptSelectorPᄋ이 () {
 		return (SelectorPoolIF) map.get("AcceptSelectorPool");
 	}
 
-	// RequestSelectorPool 가져오기  
+	// RequestSelectorPool 가져오기
 	public static SelectorPoolIF getRequestSelectorPool() {
 		return (SelectorPoolIF) map.get("RequestSelectorPool");
 	}
 
-	// ByteBufferPool을 등록한다.  
+	// ByteBufferPool을 등록한다.
 	public static void registByteBufferPool(ByteBufferPoolIF byteBufferPool) {
 		map.put("ByteBufferPool", byteBufferPool);
 	}
@@ -539,6 +541,9 @@ public class PoolManager {
 - 이 클래스는 이후 ThreadPool 안의 accept, read 이벤트를 처리하는 스레드들이 SelectorPoolIF 와 ByteBufferPoolIF 을 사용해야 할 때, 해당 풀을 손쉽게 가져오게 하기 위해서 만들었다.
 - 사실 이 클래스는 각각의 풀을 제어하기 위한 컨트롤러의 역할을 하게 하는 것이 바람직하다.
 - 하지만 코드를 단순하게 만들기 위해서 원래 의도와는 다른 행동을 하는 객체로 구현했다.
+
+- 이제 SelectorPoolIF 인터페이스를 보자.
+- 이 인터페이스는 각 셀렉터 풀의 실행 메소드를 정의하고 있다.
 
 ```java
 package net.daum.javacafe.pool.selector;
@@ -563,10 +568,10 @@ import java.util.List;
 public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
 		
 	protected int size = 2;
-	private int roundRobinlndex = 0;
+	private int roundRobinlndex = 0; // 중요
 		
-	private final Object monitor = new Object();
-	protected final List pool = new ArrayList();
+	private final Object monitor = new Object(); // 중요
+	protected final List pool = new ArrayList(); // 중요
 
 	// 하위 클래스에서 구현해야 하는 메소드  
 	protected abstract Thread createHandler(int index);
@@ -575,7 +580,7 @@ public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
 
 	public Thread get() { 
 		synchronized (monitor) {
-			return (Thread) pool.get(roundRobinIndex++ % size);
+			return (Thread) pool.get(roundRobinIndex++ % size); // 중요
 		}
 	}
 
@@ -613,13 +618,13 @@ public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
 package net.daum.javacafe.pool.selector;
 
 import java.io.IOException;  
-import java.nio.channels.Selector;
-import java.util.Iterator;
-
-import net.daum.javacafe.pool.selector.handler.AcceptHandler;
-import net.daum.javacafe.queue.Queue;
-
-public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
+import java.nio.channels.Selector;  
+import java.util.Iterator;  
+  
+import net.daum.javacafe.pool.selector.handler.AcceptHandler;  
+import net.daum.javacafe.queue.Queue;  
+  
+public class AcceptSelectorPool extends SelectorPoolAdaptor {
 
 	private int port = 9090;
 	private Queue queue = null;
@@ -630,7 +635,7 @@ public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
 
 	public AcceptSelectorPool(Queue queue, int size, int port) {
 		super. size = size;  
-		this.queue = queue;  
+		this.queue = queue; // 중요
 		this.port = port;
 		init();
 	}
@@ -644,11 +649,11 @@ public class AcceptSelectorPool extends SelectorPᄋ이Adaptor {
 	protected Thread createHandler(int index) {
 		Selector selector = null;  
 		try {
-			selector = Selector.open();
+			selector = Selector.open(); // 중요
 		} catch (IOException e) { 
 			e.printStackTrace() ;
 		}  
-		Thread handler = new AcceptHandler(queue,selector, port, index);
+		Thread handler = new AcceptHandler(queue,selector, port, index); // 중요
 		return handler;
 	}
 
