update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -679,9 +679,11 @@ public class AcceptSelectorPool extends SelectorPoolAdaptor {
 - 생성자에서 공통적으로 사용할 Queue 객체를 받아서 내부적으로 저장해둔 후에 실제 행동을 할 핸들러를 생성할 때 파라미터로 넘겨주는 곳을 주의깊게 보자.
 - 이때 Selector 도 새롭게 생성해서 같이 넘겨주는 것을 알 수 있다.
 - `startAll()`과 `stopAll()` 메소드는 이 풀에 등록된 핸들러들을 모두 시작시키거나 모두 중지시키는 역할을 한다.
-- 이들 메소드의 구현에서 짐작 할 수 있듯이 각각의 핸들러는 독립적으로 행동하도록 하기 위해 Thread 를 상속받는다.
+- 각각의 핸들러는 독립적으로 행동하도록 하기 위해 Thread 를 상속받는다.
 
-- Accept 와 Request 핸들러를 보자.
+- RequestSelectorPool 은 위 코드와 거의 유사하다.
+
+- 이제 실제 이벤트 셀렉션을 담당하는 Accept 와 Request 핸들러를 살펴보자.
 
 ```java
 package net.daum.javacafe.pool.selector.handler;
@@ -718,9 +720,11 @@ public class AcceptHandler extends Thread {
 	// 이 메소드에서 초기화 작업을 한다.
 	private void init() {
 		try {
-			// 서버소켓채널을생성한다.  
+			// 서버소켓채널을 생성한다.  
 			ServerSocketChannel ssc = ServerSocketChannel.open();
-			// 서버소켓채널을 비블록킹 모드로 설정한다. ssc.configureBlocking(false);
+			// 서버소켓채널을 비블록킹 모드로 설정한다.
+			ssc.configureBlocking(false);
+			
 			InetSocketAddress address = new InetSocketAddress("localhost", port);
 			// 바운드한다.  
 			ssc.socket().bind(address);
@@ -763,14 +767,13 @@ public class AcceptHandler extends Thread {
 		}
 	}
 
-	// 여기서 접속한 클라이언트와 연결하기 위한 소켓채널과 이벤트 형식을
-	// Job 객체로 캡슐화한 후에 공통적으로 사용하는 큐에 넣는다.
+	// 여기서 접속한 클라이언트와 연결하기 위한 소켓채널과 이벤트 형식을 Job 객체로 캡슐화한 후에 공통적으로 사용하는 큐에 넣는다.
 	// 즉，이 클래스가 Accept 이벤트에 대해 생성자(producer) 의 역할을 하는 것이다.
 	private void pushMyJob(SocketChannel sc) {
 		Map session = new HashMap();
 		session.put ("SocketChannel”, sc);
 		Job job = new Job (NIOEvent.ACCEPT_EVENTf session);
-		queue.push(job);
+		queue.push(job); // 중요
 	}
 }
 ```
@@ -778,7 +781,7 @@ public class AcceptHandler extends Thread {
 - 접속된 클라이언트를 여기서 바로 처리하는 것이 아니라 Job 객체로 캡슐화해서 큐에 집어넣는다.
 - 이후 이 객체는 Accept 처리를 담당하는 ThreadPool 의 스레드가 이 큐에서 Job 객체를 꺼내서 처리한다.
 
-
+- 이제 RequestHandler 클래스를 살펴보자.
 - RequestHandler 는 AcceptHandler 클래스와 달리 Thread 를 직접적으로 상속받지 않고 중간에 HandlerAdaptor 추상 클래스를 상속받는다.
 
 ```java
@@ -845,8 +848,7 @@ public class RequestHandler extends HandlerAdaptor {
 		}
 	}
 
-	// newClients 벡터에 저장된 등록하려는 소켓채널들을  
-	// 이 클래스의 Selector에 등록시키고 채팅방에 추가한다.  
+	// newClients 벡터에 저장된 등록하려는 소켓채널들을 이 클래스의 Selector에 등록시키고 채팅방에 추가한다.  
 	private synchronized void processNewConnection () throws ClosedChannelException {
 		Iterator iter = newClients.iterator();
 		while (iter.hasNext()) {
@@ -867,8 +869,7 @@ public class RequestHandler extends HandlerAdaptor {
 		}
 	}
 
-	// AcceptHandler와 마찬가지로 read 이벤트와 관련 객체를 캡술화한
-	// Job 객체를 생성하고 이 객체를 큐에 집어넣는다.
+	// AcceptHandler와 마찬가지로 read 이벤트와 관련 객체를 캡술화한 Job 객체를 생성하고 이 객체를 큐에 집어넣는다.
 	private void pushMyJob(SelectionKey key) {
 		Map session = new HashMap();
 		session.put ("SelectionKey", key);
@@ -887,6 +888,7 @@ public class RequestHandler extends HandlerAdaptor {
 - Accept 처리 스레드가 등록한 소켓채널을 셀렉터에 등록시키고 이 셀렉터에서 준비된 Read 이벤트들은 Job 객체로 캡슐화해서 큐에 집어넣는다.
 - 그러면 이후 처리는 ReadWrite 처리스레드가 하게 된다.
 
+- 이제 마지막으로 ThreadPool 을 살펴보자.
 - ThreadPool 에는 해당 객체가 어떻게 행동할지를 정의한 ThreadPoolIF 인터페이스가 있으며 이것을 구현한 것이 ThreadPool 클래스다.
 
 ```java
@@ -1019,7 +1021,7 @@ import net.daum.javacafe.pool.selector.handler.HandlerAdaptor;
 import net.daum.javacafe.queue.ChattingRoom;
 import net.daum.javacafe.queue.Queue;
 
-public class AcceptPrᄋcessor extends Thread {
+public class AcceptProcessor extends Thread {
 
 	private Queue queue = null;
 	
