update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -1070,7 +1070,7 @@ import net.daum.javacafe.pool.buffer.ByteBufferPoolIF;
 import net.daum.javacafe.queue.ChattingRoom;  
 import net.daum.javacafe.queue.Queue;
 
-public class ReadWritePrᄋcessor extends Thread {
+public class ReadWriteProcessor extends Thread {
 
 	private Queue queue = null;
 	
@@ -1141,5 +1141,5 @@ public class ReadWritePrᄋcessor extends Thread {
 }
 ```
 
-- 큐에서Job 객체를 꺼내오고 이렇게 가져온 객체를 조작해서 채팅룸 안의 모든 사용자들에게 동일한 메시지를 브로드캐스트 해준다.
+- 큐에서 Job 객체를 꺼내오고 이렇게 가져온 객체를 조작해서 채팅룸 안의 모든 사용자들에게 동일한 메시지를 브로드캐스트 해준다.
 - 이 서버에 대한 클라이언트는 15장에서 만든 것을 사용했다.
