--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -63,11 +63,13 @@ private void clearBuffer(ByteBuffer buffer) {
 
 - 14장의 메모리 매핑을 설명하는 곳에서 만든 ByteBufferPool 을 이곳에서 사용하면 효율적으로 메모리를 재사용할 수 있고, 매번 ByteBuffer 객체의 생성, 해제에 따른 가비지 생성 부담도 줄어들 것이다.
 
-- 다이렉트 ByteBuffer(13장 참고)를 생성하는 것은 상당히 느린 작업이고, 이 문제는 ByteBufferPool 을 사용하여 해결할 수 있다.
+- 다이렉트 ByteBuffer(13장 참고)를 생성하는 것은 상당히 느린 작업이다.
+- 이 문제는 ByteBufferPool(14장 참고) 을 사용하여 해결할 수 있다.
 
-- ByteBufferPool 은 메모리와 파일 매핑을 통해 생성한 버퍼 두 가지를 함께 가지고 있다. 
-	- 평소에는 일반적으로 성능이 뛰어난 메모리 버퍼를 사용하고 
-	- 초기에 설정한 메모리 버퍼가 이미 모두 사용중일 때에는 파일 매핑을 통해 생성한 가상 메모리 버퍼, 즉 MappedByteBuffer를 시용함으로써 물리적 메모리의 한계를 극복할 수 있도록 만든 버퍼다
+> [!tip] ByteBufferPool 이란
+> ByteBufferPool 은 메모리와 파일 매핑을 통해 생성한 버퍼 두 가지를 함께 가지고 있다. 
+> - 평소에는 일반적으로 성능이 뛰어난 메모리 버퍼를 사용하고
+> - 초기에 설정한 메모리 버퍼가 이미 모두 사용중일 때에는 파일 매핑을 통해 생성한 가상 메모리 버퍼, 즉 MappedByteBuffer를 시용함으로써 물리적 메모리의 한계를 극복할 수 있도록 만든 버퍼다
 
 # 03. 비효율적인 데이터 전송에 대한 고려
 
@@ -81,11 +83,11 @@ private void clearBuffer(ByteBuffer buffer) {
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 16-3.png|600]]
 
-결국 의미없이 도착한 1 Byte 메시지 때문에 서버는 같은 과정을 두번 거치게 되기 때문에 성능 저하가 일어난다.
-쓰기도 마찬가지다. 버퍼링을 하지 않고 그냥 데이터를 스트림에 흘려보낼 경우, 받는 쪽에서는 위에서 설명한 것과 같은 부담이 생기게 된다.
+- 결국 의미없이 도착한 1 Byte 메시지 때문에 서버는 같은 과정을 두번 거치게 되기 때문에 성능 저하가 일어난다.
+- 쓰기도 마찬가지다. 버퍼링을 하지 않고 그냥 데이터를 스트림에 흘려보낼 경우, 받는 쪽에서는 위에서 설명한 것과 같은 부담이 생기게 된다.
 
-이 부분을 가장 간단하고 효율적으로 처리하는 방법이 `read()` 메소드를 두 번 호출하게 하는 것이다.
-쓰기는 `compact()`, `hasRemaining()` 메소드를 이용해서 아직 버퍼의 내용을 다 보내지 못한 경우, 곧바로 다시 보내게 만들 수 있다.
+- 이 부분을 가장 간단하고 효율적으로 처리하는 방법이 `read()` 메소드를 두 번 호출하게 하는 것이다.
+- 쓰기는 `compact()`, `hasRemaining()` 메소드를 이용해서 아직 버퍼의 내용을 다 보내지 못한 경우, 곧바로 다시 보내게 만들 수 있다.
 
 # 04. 동시성을 이용한 성능 극대화
 
@@ -124,6 +126,8 @@ if (key.isAcceptable()) {
 > 이렇게 병목부분이 될 수 있는 부분인 셀렉터에 대해 그 사용 빈도나 관리 채널의 개수에 따라 일정한 한도 안에서 자동적으로 셀렉터의 개수가 늘어나거나 줄어들도록 SelectorPool 을 만들어 사용하면 서버의 성능 향상에 많은 도움이 될 것이다.
 
 ## 3. ThreadPool 사용
+
+- 아래 코드들 역시 개선의 여지가 있다.
 
 ```java
 private void accept(SelectionKey key) {
@@ -196,7 +200,7 @@ private void read(SelectionKey key) {
 ### event
 
 - 이 패키지에는 서버에서 발생하는 이벤트 형식을 정의하고 있는 NIOEvent 인터페이스와 
-- 이렇게 발생된 이벤트를 처리하기 위해 사용할 Job 클래스가 있다.
+	- 이렇게 발생된 이벤트를 처리하기 위해 사용할 Job 클래스가 있다.
 - AdvancedChatServer 는 두 가지 이벤트만을 처리하는데,
 	- 클라이언트가 서버로 Accept 하는 것과 
 	- 클라이언트가 보낸 메시지를 Read 하는 것이다.
