update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -215,7 +215,7 @@ private void read(SelectionKey key) {
 
 - ThreadPool
 	- accept, read/write 를 처리한다.
-	- accept 스레드는 서버에 접속한 클라이언트들을 처리한는 역할을 한다.
+	- accept 스레드는 서버에 접속한 클라이언트들을 처리하는 역할을 한다.
 	- read/write 스레드는 클라이언트가 보낸 메시지를 해당 서버에 접속한 모든 클라이언트들에게 브로드캐스트하는 역할을 한다.
 
 - SelectorPool
@@ -237,7 +237,7 @@ private void read(SelectionKey key) {
 
 ### util
 
-- 동적으로 다이나믹하게 객체를 생성하는 것을 보여주기 위해 ThreadPool 에서 사용하는 Dynamic ClassLoader 클래스가 있는 패키지
+- 동적으로 다이나믹하게 객체를 생성하는 것을 보여주기 위해 ThreadPool 에서 사용하는 DynamicClassLoader 클래스가 있는 패키지
 - 서버의 재시작없이도 기능을 확장할 수 있다는 것을 보여주기 위한 패키지
 
 ## 전체 구조
@@ -272,10 +272,10 @@ import net.daum.javacafe.queue.Queue;
 public class AdvancedChatServer {
 
 	private Queue queue = null;  
-	private SelectorPoolIF acceptSelectorPool = null;  
-	private SelectorPoolIF requestSelectorPool = null;  
+	private SelectorPoolIF acceptSelectorPool = null;
+	private SelectorPoolIF requestSelectorPool = null;
 	  
-	private ByteBufferPoolIF byteBufferPool = null;  
+	private ByteBufferPoolIF byteBufferPool = null;
 	  
 	ThreadPoolIF acceptThreadPool = null;  
 	ThreadPoolIF readWriteThreadPool = null;  
@@ -513,7 +513,7 @@ public class PoolManager {
 
 	// AcceptSelectorPool에 등록한다.
 	public static void registAcceptSelectorPool(SelectorPoolIF selectorPool) {
-		map.put("AcceptSelectorPool", selectorPool) ;
+		map.put("AcceptSelectorPool", selectorPool);
 	}
 
 	// RequestSelectorPool에 등록한다.
