update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -580,10 +580,10 @@ public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
 
 	// 하위 클래스에서 구현해야 하는 메소드  
 	protected abstract Thread createHandler(int index);
-	public abstract void startAll();  
+	public abstract void startAll();
 	public abstract void stopAll();
 
-	public Thread get() { 
+	public Thread get() {
 		synchronized (monitor) {
 			return (Thread) pool.get(roundRobinIndex++ % size); // 중요
 		}
@@ -592,7 +592,7 @@ public abstract class SelectorPoolAdaptor implements SelectorPoolIF {
 	public void put(Thread handler) {
 		synchronized (monitor) {
 			if (handler != null) {
-				pool. add(handler);
+				pool.add(handler);
 			}
 			monitor.notify();
 		}
@@ -652,25 +652,25 @@ public class AcceptSelectorPool extends SelectorPoolAdaptor {
 	}
 
 	protected Thread createHandler(int index) {
-		Selector selector = null;  
+		Selector selector = null;
 		try {
 			selector = Selector.open(); // 중요
-		} catch (IOException e) { 
-			e.printStackTrace() ;
+		} catch (IOException e) {
+			e.printStackTrace();
 		}  
-		Thread handler = new AcceptHandler(queue,selector, port, index); // 중요
+		Thread handler = new AcceptHandler(queue, selector, port, index); // 중요
 		return handler;
 	}
 
-	public void startAll() {  
-		Iterator iter = pool. iterator();
+	public void startAll() {
+		Iterator iter = pool.iterator();
 		while (iter.hasNext()) {
 			Thread handler = (Thread) iter.next();
 			handler.start();
 		}
 	}
 
-	public void stopAll() {  
+	public void stopAll() {
 		Iterator iter = pool.iterator();
 		while (iter.hasNext()) {
 			Thread handler = (Thread) iter.next();
@@ -746,7 +746,7 @@ public class AcceptHandler extends Thread {
 	// 이 메소드 안에서 무한루프를 돌면서 클라이언트의 Accept 이벤트를 처리한다.
 	public void run() {
 		try {
-			while (!Thread.currentThread().islnterrupted()) {
+			while (!Thread.currentThread().isInterrupted()) {
 				// 블록킹되는 select() 메소드를 시용한다.
 				int keysReady = selector.select();
 				acceptPendingConnections();
