update: System Design Interview - 08장. URL 단축기 설계

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/08장. URL 단축기 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/08장. URL 단축기 설계.md
@@ -6,3 +6,42 @@ tags:
   - 책_가상_면접_사례로_배우는_대규모_시스템_설계_기초
   - 책_System_Design_Interview
 ---
+이 책에서 반복되는 내용이다. 하지만 중요하니까 한번 더 적는다.
+
+>[!important]
+>시스템 설계 면접 문제는 의도적으로 어떤 정해진 결말을 갖지 않도록 만들어진다.
+>따라서 면접장에서 시스템을 성공적으로 설계해 내려면 질문을 통해 모호함을 줄이고 요구사항을 알아내야 한다.
+
+- 시스템의 기본 기능
+	1. URL 단축 : 주어진 긴 URL 을 훨씬 짧게 줄인다.
+	2. URL 리디렉션 : 축약된 URL 로 HTTP 요청이 오면 원래 URL 로 안내
+	3. 높은 가용성과 규모 확장성, 그리고 장애 감내가 요구됨
+
+## URL 리디렉션의 종류
+
+단축 URL 을 사용하기 때문에 URL 리디렉션은 필수적이다.
+여기에는 301 응답과 302 응답 방법이 있는데, 두개의 차이는 캐시의 차이이다.
+
+- 301 Permanently Moved
+	- 이 응답은 해당 URL 에 대한 HTTP 요청의 처리 책임이 영구적으로 Location 헤더에 반환된 URL 로 이전되었다는 응답이다.
+	- 영구적으로 이전되었으므로, 브라우저는 이 응답을 캐시한다.
+	- 따라서 추후 같은 단축 URL 에 요청을 보낼 필요가 있을 때 브라우저는 캐시된 원래 URL 로 요청을 보내게 된다.
+- 302 Found
+	- 이 응답은 주어진 URL 로의 요청이 일시적으로 Location 헤더가 지정하는 URL 에 의해 처리되어야 한다는 응답이다.
+	- 따라서 클라이언트의 요청은 언제나 단축 URL 서버에 먼저 보내진 후에 원래 URL 로 리디렉션되어야 한다.
+
+- 301 응답의 장점
+	- 서버 부하를 줄이는데 도움이 된다.
+		- 첫 번째 요청만 단축 URL 서버로 전송되고, 이후에는 캐시된 내용을 사용할 것이기 때문이다.
+- 302 응답의 장점
+	- 트래픽 분석할 때 클릭 발생율, 발생 위치를 추적하는데 더 유리하다.
+
+## 단축 URL 저장 위치
+
+- 해시 테이블이 가장 직관적인 방법이지만 메모리는 비싼 자원이기 때문에 적절하지 않다.
+- 따라서 RDBMS 에 <단축 URL, 원래 URL> 을 RDBMS 에 저장하는 방법이 더 나은 방법이다.
+
+## 해시 함수
+
+- 
+
