--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/08장. URL 단축기 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/08장. URL 단축기 설계.md
@@ -43,5 +43,40 @@ tags:
 
 ## 해시 함수
 
-- 
+- 원래 URL 을 단축 URL 로 바꾸는데 필수적이다.
+- 해시 함수 구현으로 두가지 방법을 살펴보자.
+	1. 해시 후 충돌 해소
+	2. base-62 변환
+
+### 해시 후 충돌 해소
+
+- 먼저 잘 알려진 해시 함수(CRC32, MD5, SHA-1)과 같은 해시 함수들을 이용하여 원래 URL 을 줄인다.
+- 그런데 가장 짧은 해시값도 요구사항인 길이 7 보다는 길다. 따라서 잘라야한다.
+- 그런데 자르면 해시값이 충돌날 수 있다. 따라서 충돌이 해소될 때까지 사전에 정한 문자열을 해시값에 덧붙이고, 다시 해시함수를 이용하여 해싱을 하는 과정을 반복한다. 언제까지? 충돌이 나지 않을때까지.
+- 이 방법을 쓰면 충돌은 해소할 수 있지만 단축 URL 을 생성할 때 한 번 이상 데이터베이스 질의를 해야해서 오버헤드가 크다.
+- 여기서 데이터베이스 대신 블룸 필터를 사용하면 성능을 높일 수 있다.
+	- 블룸 필터란?
+		- 어떤 집합에 특정 원소가 있는지 검사할 수 있도록 하는 확률론에 기초한 공간 효율이 좋은 기술
+		- 집합에 속한 원소를 속하지 않았다고 말하는 일(False Negative)은 절대 없다.
+		- 반대로 속하지 않은 원소를 가끔 속해있다(False Positive)고 말할 때가 있다.
+		- 블룸 필터와 RDBMS 를 섞어서 쓰는건 어떨까?
+
+### base-62 변환
+
+- 62진법(0~9, a~z, A~Z)으로 원래 URL 을 변환한다.
+	- ID 생성기를 이용하여 원래 URL 에서 ID 를 얻어낸다.
+	- 이 ID 를 62진수로 변환하여 단축 URL 을 얻는다.
+
+| 해시 후 충돌 해소 전략 | base-62 변환 |
+| ---- | ---- |
+| 단축 URL 의 길이가 고정됨 | 단축 URL 의 길이가 가변적. ID 값이 커지면 같이 길어짐 |
+| 유일성이 보장되는 ID 생성기가 필요치 않음 | 유일성 보장 ID 생성기가 필요 |
+| 충돌이 가능해서 해소 전략이 필요 | ID의 유일성이 보장된 후에야 적용 가능한 전략이라 충돌은 아예 불가능 |
+| ID 로부터 단축 URL 을 계산하는 방식이 아니라서 다음에 쓸 수 있는 URL 을 알아내는 것이 불가능 | ID가 1씩 증가하는 값이라고 가정하면 다음에 쓸 수 있는 단축 URL 이 무엇인지 쉽게 알아낼 수 있어서 보안상 문제가 될 소지가 있음 |
+
+
+
+
+
+
 
