update: System Design Interview - 08장. URL 단축기 설계

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -464,7 +464,7 @@ public class Job {
 
 	public Job () {}
 	
-	public Job(int eventType, Map session) { 
+	public Job(int eventType, Map session) {
 		this.eventType = eventType;
 		this.session = session;
 	}
@@ -639,7 +639,7 @@ public class AcceptSelectorPool extends SelectorPoolAdaptor {
 	}
 
 	public AcceptSelectorPool(Queue queue, int size, int port) {
-		super. size = size;  
+		super.size = size;  
 		this.queue = queue; // 중요
 		this.port = port;
 		init();
@@ -709,9 +709,9 @@ import net.daum.javacafe.queue.Queue;
 
 public class AcceptHandler extends Thread {
 
-	private Queue queue = null;  
+	private Queue queue = null;
 	private Selector selector = null;
-	private int port = 9090;  
+	private int port = 9090;
 	private String name = "AcceptHandler-”;
 
 	public AcceptHandler(Queue queue, Selector selector, int port, int index) {
@@ -725,19 +725,19 @@ public class AcceptHandler extends Thread {
 	// 이 메소드에서 초기화 작업을 한다.
 	private void init() {
 		try {
-			// 서버소켓채널을 생성한다.  
+			// 서버소켓채널을 생성한다.
 			ServerSocketChannel ssc = ServerSocketChannel.open();
 			// 서버소켓채널을 비블록킹 모드로 설정한다.
 			ssc.configureBlocking(false);
 			
 			InetSocketAddress address = new InetSocketAddress("localhost", port);
-			// 바운드한다.  
+			// 바운드한다.
 			ssc.socket().bind(address);
 
 			System.out.println("@AcceptHandler(" + getName () + ") Bound to " + address);
 
 			// 셀렉터에 등록한다.
-			ssc.register(this. selector, SelectionKey,OP_ACCEPT);
+			ssc.register(this.selector, SelectionKey.OP_ACCEPT);
 		} catch (lOException e) {
 			e .printStackTrace();
 		}
@@ -773,11 +773,11 @@ public class AcceptHandler extends Thread {
 	}
 
 	// 여기서 접속한 클라이언트와 연결하기 위한 소켓채널과 이벤트 형식을 Job 객체로 캡슐화한 후에 공통적으로 사용하는 큐에 넣는다.
-	// 즉，이 클래스가 Accept 이벤트에 대해 생성자(producer) 의 역할을 하는 것이다.
+	// 즉，이 클래스가 Accept 이벤트에 대해 생성자(producer)의 역할을 하는 것이다.
 	private void pushMyJob(SocketChannel sc) {
 		Map session = new HashMap();
 		session.put ("SocketChannel”, sc);
-		Job job = new Job (NIOEvent.ACCEPT_EVENTf session);
+		Job job = new Job (NIOEvent.ACCEPT_EVENT, session);
 		queue.push(job); // 중요
 	}
 }
@@ -865,7 +865,7 @@ public class RequestHandler extends HandlerAdaptor {
 		newClients.clear();
 	}
 
-	private void processRequest() {  
+	private void processRequest() {
 		Iterator iter = selector.selectedKeys().iterator();
 		while (iter.hasNext()) {
 			SelectionKey key = (SelectionKey) iter.next ();
@@ -1009,7 +1009,7 @@ public class ThreadPool implements ThreadPoolIF {
 - 이 클래스는 min 에 해당하는 개수만큼의 스레드를 초기에 생성한다.
 - 그리고 이후 `addThread()` 메소드로 스레드를 추가 할 수 있다.
 - 하지만 `중요` 라고 주석처리된 부분처럼 제한된 스레드 이상을 생성하지는 못하게 되어 있다.
-- `remove ThreadO` 메소드는 스레드를 풀에서 스레드 하나를 제거하는 메소드다.
+- `remove Thread()` 메소드는 스레드를 풀에서 스레드 하나를 제거하는 메소드다.
 	- 이 메소드 역시 현재 스레드가 min 개일 경우 더 이상 제거하지 못하게 되어 있다.
 
 - 실제 큐에서 객체를 꺼내서 조작하는 두 가지 프로세스 클래스를 살펴보자.
@@ -1041,7 +1041,7 @@ public class AcceptProcessor extends Thread {
 				Job job = queue.pop(NIOEvent.ACCEPT_EVENT); // 중요
 				SocketChannel sc = (SocketChannel) job.getSession().get("SocketChannel”);
 				// 비블록킹 모드로 설정한다.
-				sc.configureBlocking(false};
+				sc.configureBlocking(false);
 				// 핸들러를 가져온다.  
 				// get() 메소드 내부적으로 라운드로빈 방식을 사용한다.
 				HandlerAdaptor handler = (HandlerAdaptor) PoolManager.getRequestSelectorPool().get(); // 중요
@@ -1131,7 +1131,7 @@ public class ReadWriteProcessor extends Thread {
 				}
 			}
 		} finally { // 중요
-			// finally 문 안에서 확실하게 버퍼를풀에 반환한다.
+			// finally 문 안에서 확실하게 버퍼를 풀에 반환한다.
 			bufferPool.putBuffer(buffer); // 중요
 		}
 	}
