update: Kotlin In Action - 1장. 코틀린이란 무엇이며, 왜 필요한가?

--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -4,6 +4,12 @@ tags:
   - 책_Kotlin_In_Action
   - Kotlin
 ---
+> [!note] 코틀린이란?
+> 자바 플랫폼에서 돌아가는 새로운 프로그래밍 언어
+
+- 자바 코드와의 상호운용성(interoperability)을 중시하기 때문에 자바가 사용 중인 곳이라면 거의 대부분 코틀린을 활용할 수 있다.
+
+
 
 
 
