update: Kotlin In Action - 1장. 코틀린이란 무엇이며, 왜 필요한가?

--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -9,6 +9,37 @@ tags:
 
 - 자바 코드와의 상호운용성(interoperability)을 중시하기 때문에 자바가 사용 중인 곳이라면 거의 대부분 코틀린을 활용할 수 있다.
 
+# 1.1 코틀린 맛보기
+# 1.2 코틀린의 주요 특성
+
+## 1.2.1 대상 플랫폼: 서버, 안드로이드 등 자바가 실행되는 모든 곳
+
+> [!note] 코틀린의 목적
+> 코틀린의 주목적은 현재 자바가 사용되고 있는 모든 용도에 적합하며서도 더 간결하고 생산적이며 안전한 대체 언어를 제공하는 것
+
+- 코틀린을 활용할 수 있는 가장 일반적인 영역
+	- 서버상의 코드(특히 웹 애플리케이션의 백엔드)
+	- 안드로이드 디바이스에서 실행되는 모바일 애플리케이션
+
+- 모바일 애플리케이션
+	- 인텔의 멀티OS 엔진을 사용하면 코틀린을 iOS 디바이스에서도 실행할수 있다.
+
+- 데스크탑 애플리케이션
+	- 코틀린과 TornadoFX, 자바FX 등을 함께 사용할 수 있다.
+
+- 브라우저 & 노드
+	- 자바스크립트로도 코틀린을 컴파일할 수 있다.
+
+- 현재 JetBrains 에서는 코틀린 네이티브 백엔드도 개발 중이다.
+
+---
+
+- 코틀린은 어느 한 문제 영역만을 해결하거나 오늘날 소프트웨어 개발이 처한 어려움 중 일부만을 다루기 위한 언어가 아니다.
+- 대신 코틀린은 개발 과정에서 수행해야 하는 모든 과업에 있어 폭넓게 생산성을 향상시켜준다.
+
+
+
+
 
 
 
