--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -37,7 +37,46 @@ tags:
 - 코틀린은 어느 한 문제 영역만을 해결하거나 오늘날 소프트웨어 개발이 처한 어려움 중 일부만을 다루기 위한 언어가 아니다.
 - 대신 코틀린은 개발 과정에서 수행해야 하는 모든 과업에 있어 폭넓게 생산성을 향상시켜준다.
 
+## 1.2.2 정적 타입 지정 언어
 
+> [!note]
+> 코틀린은 정적 타입(statically typed) 지정 언어다.
+
+- 정적 타입 지정이란?
+	- 모든 프로그램 구성 요소의 타입을 컴파일 시점에 알 수 있고
+	- 프로그램 안에서 객체의 필드나 메서드를 사용할 때마다 컴파일러가 타입을 검증해준다는 뜻이다.
+
+- 동적 타입 지정이란?
+	- 타입과 관계없이 모든 값을 변수에 넣을 수 있고,
+	- 메서드나 필드 접근에 대한 검증이 실행 시점에 일어나며,
+	- 그에 따라 코드가 더 짧아지고 데이터 구조를 더 유연하게 생성하고 사용할 수 있다.
+	- 하지만 반대로 이름을 잘못 입력하는 등의 실수도 컴파일 시 거러내지 못하고 실행 시점에 오류가 발생한다.
+	- ex) Groovy, JRuby
+
+
+> [!info] 타입 추론 (type inference)
+> 컴파일러가 문맥을 고려해 변수 타입을 결정하는 기능
+
+- 코틀린은 타입 추론을 지원하여 변수 타입을 자동으로 유추할 수 있다.
+
+### 정적 타입 지정의 장점
+
+- 성능
+	- 실행 시점에 어떤 메서드를 호출할지 알아내는 과정이 필요 없으므로 메서드 호출이 더 빠르다.
+- 신뢰성
+	- 컴파일러가 프로그램의 정확성(correctnesss)을 검증하기 때문에 실행 시 프로그램이 오류로 중단될 가능성이 더 적어진다.
+- 유지 보수성
+	- 코드에서 다루는 객체가 어떤 타입에 속하는지 알 수 있기 때문에 처음 보는 코드를 다룰 때도 더 쉽다.
+- 도구 지원
+	- 정적 타입 지정을 활용하면 더 안전하게 리팩토링할수 있고, 
+	- 도구는 더 정확한 코드 완성 기능을 제공할 수 있으며, 
+	- IDE 의 다른 지원 기능도 더 잘 만들 수 있다.
+
+### 널이 될 수 있는 타입 (nullable type)
+
+- 코틀린이 널이 될 수 있는 타입을 지원함에 따라 
+- 컴파일 시점에 널 포인터 예외(null pointer exception)가 발생할 수 있는지 여부를 검사할 수 있어서
+- 좀 더 프로그램의 신뢰성을 높일 수 있다.
 
 
 
