--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -78,7 +78,43 @@ tags:
 - 컴파일 시점에 널 포인터 예외(null pointer exception)가 발생할 수 있는지 여부를 검사할 수 있어서
 - 좀 더 프로그램의 신뢰성을 높일 수 있다.
 
+## 1.2.3 함수형 프로그래밍과 객체지향 프로그래밍
 
+### 함수형 프로그래밍의 핵심 개념
+
+- 일급 시민인(first-class) 함수
+	- 함수를 일반 값처럼 다룰 수 있다.
+		- 함수를 변수에 저장 가능
+		- 함수를 인자로 다른 함수에 전달 가능
+		- 함수에서 새로운 함수를 만들어서 반환 가능
+- 불변성(immutability)
+	- 일단 만들어지고 나면 내부 상태가 절대로 바뀌지 않는 불변 객체를 사용해 프로그램을 작성한다.
+- 부수 효과(side effect) 없음
+	- 입력이 같으면 항상 같은 출력을 내놓고 다른 객체의 상태를 변경하지 않는다.
+	- 함수 외부나 다른 바깥 환경과 상호작용하지 않는 순수 함수(pure function)를 사용한다.
+
+### 함수형 스타일의 장점
+
+- 간결성
+	- 함수형 코드는 그에 상응하는 명령형(imperative) 코드에 비해 더 간결하며 우아하다.
+	- (순수) 함수를 값처럼 활용할 수 있으면 더 강력한 추상화(abstraction)를 할 수 있고 강력한 추상화를 사용해 코드 중복을 막을 수 있다.
+- 다중 스레드를 사용해도 안전하다.
+	- 다중 스레드 프로그램에서는 적절한 동기화 없이 같은 데이터를 여러 스레드가 변경하는 경우 가장 많은 문제가 생긴다.
+	- 불변 데이터 구조를 사용하고 순수 함수를 그 데이터 구조에 적용한다면 다중 스레드 환경에서 같은 데이터를 여러 스레드가 변경할 수 없다.
+	- 따라서 복잡한 동기화를 적용하지 하지 않아도 된다.
+- 테스트하기 쉽다.
+	- 부수 효과가 있는 함수는 그 함수를 실행할 때 필요한 전체 환경을 구성하는 준비 코드(setup code)가 따로 필요하다.
+	- 하지만 순수 함수는 그런 준비 코드 없이 독립적으로 테스트할 수 있다.
+
+---
+
+- 코틀린은 함수형 스타일로 프로그램을 짤 수 있게 지원하지만 함수형 프로그래밍 스타일을 강제하지는 않는다.
+- 코틀린으로 코드를 작성할 때는 객체지향과 함수형 접근 방법을 함께 조합해서 문제에 가장 적합한 도구를 사용하면 된다.
+
+## 1.2.4 무료 오픈소스
+
+- 코틀린 언어와 컴파일러, 라이브러리 및 코틀린과 관련된 모든 도구는 모두 오픈소스며, 어떤 목적에든 무료로 사용할 수 있다.
+- Apache 2 라이선스
 
 
 
