--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -116,7 +116,25 @@ tags:
 - 코틀린 언어와 컴파일러, 라이브러리 및 코틀린과 관련된 모든 도구는 모두 오픈소스며, 어떤 목적에든 무료로 사용할 수 있다.
 - Apache 2 라이선스
 
+# 1.3 코틀린 응용
 
+## 1.3.1 코틀린 서버 프로그래밍
+
+- 브라우저에 HTML 페이지를 돌려주는 **웹 애플리케이션**
+- 모바일 애플리케이션에게 HTTP를 통해 JSON API 를 제공하는 **백엔드 애플리케이션**
+- RPC(원격 프로시저 호출) 프로토콜을 통해 서로 통신하는 작은 서비스들로 이뤄진 **마이크로서비스**
+
+## 1.3.2 코틀린 안드로이드 프로그래밍
+
+- 코틀린은 안드로이드 프로그래밍에서 사용할 수 있다.
+- 코틀린은 디폴트로 자바 8과 호환되고 자바 9~17 버전을 지원할 수 있다.
+
+- 코틀린을 사용하더라도 성능 측면에서 아무 손해가 없다.
+- 코틀린 컴파일러가 생성한 바이트코드는 일반적인 자바 코드와 똑같이 효율적으로 실행된다.
+- 코틀린의 런타임 시스템은 상당히 작기 때문에 컴파일 후 패키징한 애플리케이션 크기도 자바 애플리케이션에 비해 그리 많이 늘어나지 않는다.
+
+- 대부분의 코틀린 표준 라이브러리 함수는 인자로 받은 람다 함수를 인라이닝(inlining)한다.
+- 따라서 람다를 사용해도 새로운 객체가 만들어지지 않으므로 객체 증가로 인해 가비지 컬렉션(GC)이 늘어나서 프로그램이 자주 멈추는 일도 없다.
 
 
 
