update: 자바 IO & NIO 네트워크 프로그래밍 - 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -712,7 +712,7 @@ public class AcceptHandler extends Thread {
 	private Queue queue = null;
 	private Selector selector = null;
 	private int port = 9090;
-	private String name = "AcceptHandler-”;
+	private String name = "AcceptHandler-";
 
 	public AcceptHandler(Queue queue, Selector selector, int port, int index) {
 		this.queue = queue;
@@ -776,7 +776,7 @@ public class AcceptHandler extends Thread {
 	// 즉，이 클래스가 Accept 이벤트에 대해 생성자(producer)의 역할을 하는 것이다.
 	private void pushMyJob(SocketChannel sc) {
 		Map session = new HashMap();
-		session.put ("SocketChannel”, sc);
+		session.put ("SocketChannel", sc);
 		Job job = new Job (NIOEvent.ACCEPT_EVENT, session);
 		queue.push(job); // 중요
 	}
