update: Kotlin In Action - 1장. 코틀린이란 무엇이며, 왜 필요한가?

--- a/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/1장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -161,9 +161,48 @@ tags:
 - 컴파일러에게 프로그램이 어떻게 작동해야 하는지에 대한 정보를 더 자세히 제공해야만 컴파일러가 프로그램 코드와 프로그램의 작동 의도에 대한 정보가 일치하는지를 검증할수 있다.
 - 따라서 더 큰 안전성을 얻기 위해서는 프로그램에 더 많은 정보를 덧붙여야 하므로 생산성이 하락하는 것을 감수해야 하며 안전성과 생산성 사이에는 트레이드 오프 관계가 성립한다.
 
+- 코틀린은 JVM 에서 실행되기 때문에 상당한 안정성을 보장한다.
+- 코틀린은 실행 시점에 오류를 발생시키는 대신 컴파일러 시점 검사를 통해 오류를 더 많이 방지해준다.
+	- 대표적으로 NullPointerException, ClassCastException 을 없애기 위해 노력했다.
 
+### 1.4.4 상호운용성
 
+- 코틀린에서는 기존 라이브러리를 그대로 사용할 수 있다.
+- 자바 코드에서 코틀린 코드를 호출할 때도 아무런 노력이 필요 없다.
+- 자바와 코틀린 코드를 프로젝트에서 원하는 대로 섞어 쓸 수 있는 궁극적인 유연성을 발휘할 수 있다.
 
+- 상호운용성 측면에서 코틀린은 기존 자바 라이브러리를 가능하면 최대한 활용한다.
 
+# 1.5 코틀린 도구 사용
 
+### 1.5.1 코틀린 코드 컴파일
+
+- 코틀린 소스코드를 저장할 떄는 보통 .kt 라는 확장자를 파일에 붙인다.
+- 코틀린 컴파일러는 코틀린 소스코드를 분석해서 .class 파일을 만들어낸다.
+- 만들어진 .class 파일은 개발 중인 애플리케이션의 유형에 맞는 표준 패키징 과정을 거쳐 실행될 수 있다.
+- 가장 간단한 방식은 커맨드라인에서 kolinc 명령을 통해 코틀린 코드를 컴파일한 다음 java 명령으로 그 코드를 실행하는 것이다.
+
+```bash
+kotlinc <소스파일 또는 디렉터리> -include-runtime -d <java 이름>
+java -jar <jar 이름>
+```
+
+![[Kotlin In Action - 그림 1.1 코틀린 빌드 과정.png]]
+
+- 코틀린 컴파일러로 컴파일한 코드는 코틀린 런타임 라이브러리에 의존한다.
+- 런타임 라이브러리에는 코틀린 자체 표준 라이브러리 클래스와 코틀린에서 자바 API 의 기능을 확장한 내용이 들어있다.
+- 코틀린으로 컴파일한 애플리케이션을 배포할 때는 런타임 라이브러리도 함께 배포해야 한다. 
+- 프로젝트를 컴파일하기 위하여 Maven, Gradle 등의 빌드 시스템을 사용하는데 Maven, Gradle 은 애플리케이션을 패키지할 때 알아서 코틀린 런타임을 포함시켜준다.
+
+### 1.5.2 인텔리J 아이디어와 안드로이드 스튜디오의 코틀린 플러그인
+### 1.5.3 대화형 셸
+
+- 코틀린 코드를 빨리 시험해보고 싶다면 대화형 셸(shell)을 사용하면 된다.
+- 대화형 셸을 REPL(read-eval-print loop)이라고도 부른다.
+
+### 1.5.4 이클립스 플러그인
+
+### 1.5.5 온라인 놀이터
+
+### 1.5.6 자바-코틀린 변환기
 
