--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -4,5 +4,37 @@ tags:
   - 책_Kotlin_In_Action
   - Kotlin
 ---
+**2장에서 다루는 내용**
+
+- 함수, 변수, 클래스, enum, 프로퍼티를 선언하는 방법
+- 제어 구조
+- 스마트 캐스트
+- 예외 던지기와 예외 잡기
+
+# 2.1 기본 요소: 함수와 변수
+
+### 2.1.1 Hello, World!
+
+```kotlin
+fun main(args: Array<String>) {  
+    print("Hello, world!")  
+}
+```
+
+- 함수를 선언할 때 fun 키워드를 사용한다.
+- 파라미터 이름 뒤에 그 파라미터의 타입을 쓴다.
+- 함수를 최상위 수준에 정의할 수 있다.
+	- 꼭 클래스 안에 함수를 넣어야 할 필요가 없다.
+- 배열도 일반적인 클래스와 마찬가지이다.
+	- 코틀린에는 배열 처리를 위한 문법이 따로 존재하지 않는다.
+- System.out.println 대신에 println 이라고 쓴다.
+	- 코틀린 표준 라이브러리는 여러 가지 표준 자바 라이브러리 함수를 간결하게 사용할 수 있게 감싼 Wrapper 를 제공한다.
+- 줄 끝에 세미콜론을 붙이지 않아도 된다.
+
+### 2.1.2 함수
+
+
+
+
 
 
