--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -33,8 +33,47 @@ fun main(args: Array<String>) {
 
 ### 2.1.2 함수
 
+- 함수 선언은 fun 키워드로 시작한다.
+- fun 다음에는 함수 이름이 온다.
+- 함수 이름 뒤에는 괄호 안에 파라미터 목록이 온다.
+- 함수의 반환 타입은 파라미터 목록의 닫는 괄호 다음에 오는데, 괄호와 반환 타입 사이를 콜론으로 구분해야 한다.
 
+![[Kotlin In Action - 그림 2.1 코틀린 함수 정의.png|400]]
 
+> [!tip] 문(statement)과 식(expression)의 구분
+> 코틀린에서 If 는 식이지 문이 아니다.
+> - 식은 값을 만들어 내며 다른 식의 하위 요소로 계산에 참여할 수 있다.
+> - 문은 자신을 둘러싸고 있는 가장 안쪽 블록의 최상위 요소로 존재하며 아무런 값을 만들어내지 않는다는 차이가 있다.
+	- 자바에서는 모든 제어 구조가 문인 반면 코틀린에서는 루프를 제외한 대부분의 제어 구조가 식이다.
+	- 제어 구조를 다른 식으로 엮어낼 수 있으면 여러 일반적인 패턴을 아주 간결하게 표현할 수 있다.
+	- 반면 대입문은 자바에서는 식이었으나 코틀린에서는 문이 됐다.
+	- 그로 인해 자바와 달리 대입식과 비교식을 잘못 바꿔 버그가 생기는 경우가 없다.
+
+#### 식이 본문인 함수
+
+```kotlin
+// 블록이 본문인 함수
+fun max(a: Int, b: Int): Int {
+	return if (a > b) a else b
+}
+```
+
+```kotlin
+// 식이 본문인 함수
+fun max(a: Int, b: Int): Int = if (a > b) a else b
+```
+
+- 앞선 max 함수 예제에서는 본문이 if 식 하나로만 이뤄져 있다.
+- 이런 경우 중괄호를 없애고 return 을 제거하면서 등호를 식 앞에 붙여 더 간결하게 함수를 표현할 수 있다.
+
+> [!summary]
+> - "블록이 본문인 함수" 란 본문이 중괄호로 둘러싸인 함수
+> - "식이 본문인 함수" 란 등호와 식으로 이뤄진 함수
+
+- 코틀린에서는 식이 본문인 함수가 자주 쓰인다.
+
+- 식이 본문인 함수의 반환 타입만 생략 가능하다.
+- 블록이 본문인 함수가 값을 반환한다면 반드시 반환 타입을 지정하고 return문을 사용해 반환 값을 명시해야 한다.
 
 
 
